fix: truncate overflowing annotation values in ui (#945)

--- a/src/ui/annotations.css
+++ b/src/ui/annotations.css
@@ -262,6 +262,8 @@ div.neuroglancer-annotation-details-description {
   font-family: monospace;
   font-size: medium;
   flex: 1;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 input.neuroglancer-segment-list-entry-id {
